refactor: created two sub-packages: notification and switchboard